Keep processing state transitions on the order side.
Instead of explicitly initiating the processing order state transitions we now let the engine publish events that implement specified signals on the order side.

Introduce a maximum processing time configuration for the engine to create some jitter in the processing and let the settings return such a random time in case no general processing time is set. If none are set we still default to 2 seconds of processing.